# longfi-device-rs

./: .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DO_NOT_MERGE.txt  README.md  jlink.gdb
.cargo/: config
examples/stm32l0x2/: longfi_bindings.rs  longfi_linking.rs  main.rs
longfi-sys/: Cargo.toml  build.rs
longfi-sys/src/: lib.rs
src/: lib.rs
