[package]
name = "longfi-device"
version = "0.1.0"
authors = ["Louis Thiery <louis@helium.com>"]
edition = "2018"

[dependencies]
longfi-sys = {path = "./longfi-sys"}
libm = "0.1.4"
cortex-m = "0.5.8"

[[example]]
name = "stm32l0x2"

[dev-dependencies]
cortex-m = "0.5.8"
cortex-m-rtfm = "0.4.3"
panic-semihosting       = "0.5.2"
panic-halt = "0.2.0"
embedded-hal = { version = "0.2.2", features = ["unproven"] }
nb = "0.1.2"


[dev-dependencies.stm32l0xx-hal]
git                     = "https://github.com/stm32-rs/stm32l0xx-hal.git"
features                = ["stm32l0x2","rt"]
