[package]
name = "longfi-device"
version = "0.1.0"
authors = ["Louis Thiery <louis@helium.com>"]
edition = "2018"

[dependencies]
longfi-sys = {path = "./longfi-sys"}
libm = "0.1.4"

[[example]]
name = "stm32l0x2"

[dev-dependencies]
cortex-m = {version = "0.6.0", features = ["const-fn"] }
cortex-m-rt = "0.6.7"
cortex-m-semihosting = "0.3.2"
cortex-m-rtfm = "0.4.3"
void = { version = "1.0.2", default-features = false }
cast = { version = "0.2.2", default-features = false }
panic-semihosting       = "0.5.2"
panic-halt = "0.2.0"
embedded-hal = { version = "0.2.3", features = ["unproven"] }
nb = "0.1.2"

[dev-dependencies.stm32l0xx-hal]
git                    = "https://github.com/lthiery/stm32l0xx-hal.git"
features                = ["stm32l0x2","rt"]
branch                  = "enable-spi2"

[profile.dev]
opt-level = "s"

[profile.release]
opt-level = "z"
